Fixed overflow at step-2

--- a/multi-step-form-main/src/App.css
+++ b/multi-step-form-main/src/App.css
@@ -350,6 +350,7 @@ input::placeholder {
 
 .step-2 label {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   margin-block: 1rem;
   padding: 1rem;
